try again later

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="body">
       There are people on deck plugging the holes right now.
       <br />
-      Please try again in 10 minutes
+      Please try again later
     </div>
   </div>
 </body>
